Adição de janelas do administrador e do atleta

--- a/src/main/java/JanelaCriarAtleta.form
+++ b/src/main/java/JanelaCriarAtleta.form
@@ -112,7 +112,7 @@
           <text value="Contacto:"/>
         </properties>
       </component>
-      <component id="14de1" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="14de1" class="javax.swing.JTextField" binding="paisTextField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -120,7 +120,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="55556" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="55556" class="javax.swing.JTextField" binding="generoTextField">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -128,7 +128,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="db95a" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="db95a" class="javax.swing.JTextField" binding="modatidadeTextField">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -136,7 +136,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="f688d" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+      <component id="f688d" class="javax.swing.JTextField" binding="pesoTextField">
         <constraints>
           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -144,7 +144,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="46c05" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+      <component id="46c05" class="javax.swing.JTextField" binding="dataNascTextField">
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -152,7 +152,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="43c19" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+      <component id="43c19" class="javax.swing.JTextField" binding="contactoTextField">
         <constraints>
           <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
