--- a/src/main/java/JanelaAtletaEventos.form
+++ b/src/main/java/JanelaAtletaEventos.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JanelaAtletaEventos">
-  <grid id="27dc6" binding="panelEventos" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panelEventos" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="800" height="400"/>
@@ -29,9 +29,25 @@
           <text value="Eliminar Inscrição"/>
         </properties>
       </component>
-      <component id="4852e" class="javax.swing.JButton" binding="btnBack">
+      <component id="d5fee" class="javax.swing.JButton" binding="btnProvas">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Ver Provas"/>
+        </properties>
+      </component>
+      <component id="1f4fd" class="javax.swing.JButton" binding="btnResultado">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Resultado da Inscrição"/>
+        </properties>
+      </component>
+      <component id="4852e" class="javax.swing.JButton" binding="btnBack">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <label value="&lt;---   Voltar"/>
