--- a/src/main/java/JanelaGerirEvento.form
+++ b/src/main/java/JanelaGerirEvento.form
@@ -43,21 +43,29 @@
           <text value="Eliminar Evento"/>
         </properties>
       </component>
+      <component id="8911f" class="javax.swing.JButton" binding="btnGerir">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <label value="Gerir Prova"/>
+          <text value="Gerir Prova"/>
+        </properties>
+      </component>
       <component id="90d22" class="javax.swing.JButton" binding="btnBack">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="&lt;--- Voltar"/>
         </properties>
       </component>
-      <component id="8911f" class="javax.swing.JButton" binding="btnGerir">
+      <component id="32c3b" class="javax.swing.JButton" binding="btnFecharInsc">
         <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <label value="Gerir Prova"/>
-          <text value="Gerir Prova"/>
+          <text value="Fechar Inscrições"/>
         </properties>
       </component>
     </children>
