--- a/src/main/java/JanelaCriarAtleta.form
+++ b/src/main/java/JanelaCriarAtleta.form
@@ -160,6 +160,14 @@
         </constraints>
         <properties/>
       </component>
+      <component id="c8c14" class="javax.swing.JButton" binding="btnImportar">
+        <constraints>
+          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Importar de Ficheiro"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
