--- a/src/main/java/JanelaGerirProva.form
+++ b/src/main/java/JanelaGerirProva.form
@@ -62,14 +62,6 @@
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="89db9" class="javax.swing.JButton" binding="btnBack">
-        <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="&lt;---   Voltar"/>
-        </properties>
-      </component>
       <component id="472d6" class="javax.swing.JButton" binding="btnListar">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -84,6 +76,22 @@
         </constraints>
         <properties>
           <text value="Apresentar Calendário"/>
+        </properties>
+      </component>
+      <component id="89db9" class="javax.swing.JButton" binding="btnBack">
+        <constraints>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="&lt;---   Voltar"/>
+        </properties>
+      </component>
+      <component id="280ab" class="javax.swing.JButton" binding="btnAprProgresso">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Apresentar Progresso"/>
         </properties>
       </component>
     </children>
