--- a/src/main/java/JanelaHistoricoAtleta.form
+++ b/src/main/java/JanelaHistoricoAtleta.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JanelaListaInscritos">
-  <grid id="27dc6" binding="panelInscritos" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JanelaHistoricoAtleta">
+  <grid id="27dc6" binding="panelHistorico" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="800" height="400"/>
@@ -11,7 +11,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="9ccc1" class="javax.swing.JButton" binding="btnBack">
+      <component id="2841a" class="javax.swing.JButton" binding="btnBack">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -20,21 +20,18 @@
           <text value="&lt;---   Voltar"/>
         </properties>
       </component>
-      <component id="8d26e" class="javax.swing.JList" binding="inscritosList">
+      <hspacer id="bfed0">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <component id="595f5" class="javax.swing.JList" binding="eventosList">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="2" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
         <properties/>
-      </component>
-      <component id="226ad" class="javax.swing.JButton" binding="btnDesclassificar">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Desclassificar Atleta"/>
-        </properties>
       </component>
     </children>
   </grid>
