--- a/src/main/java/JanelaPerfil.form
+++ b/src/main/java/JanelaPerfil.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JanelaPerfil">
-  <grid id="27dc6" binding="JanelaP" layout-manager="GridLayoutManager" row-count="9" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panelPerfis" layout-manager="GridLayoutManager" row-count="9" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="800" height="400"/>
@@ -11,13 +11,13 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="7e2ba" class="javax.swing.JButton" binding="btnUser">
+      <component id="7e2ba" class="javax.swing.JButton" binding="btnFuncionario">
         <constraints>
           <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <label value="Utilizador"/>
-          <text value="Utilizador"/>
+          <label value="Funcionario"/>
+          <text value="Funcionario"/>
         </properties>
       </component>
       <component id="98aec" class="javax.swing.JButton" binding="btnAtleta">
