--- a/src/main/java/JanelaEditarAtleta.form
+++ b/src/main/java/JanelaEditarAtleta.form
@@ -105,7 +105,7 @@
           <text value="Contacto:"/>
         </properties>
       </component>
-      <component id="8d2e0" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="8d2e0" class="javax.swing.JTextField" binding="nomeTextField">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -113,7 +113,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="2dde5" class="javax.swing.JTextField" default-binding="true">
+      <component id="2dde5" class="javax.swing.JTextField" binding="paisTextField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -121,7 +121,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="f1b1d" class="javax.swing.JTextField" default-binding="true">
+      <component id="f1b1d" class="javax.swing.JTextField" binding="generoTextField">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -129,7 +129,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="a4639" class="javax.swing.JTextField" default-binding="true">
+      <component id="a4639" class="javax.swing.JTextField" binding="modalidadeTextField">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -137,7 +137,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="948b2" class="javax.swing.JTextField" default-binding="true">
+      <component id="948b2" class="javax.swing.JTextField" binding="pesoTextField">
         <constraints>
           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -145,7 +145,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="1628f" class="javax.swing.JTextField" default-binding="true">
+      <component id="1628f" class="javax.swing.JTextField" binding="dataNascTextField">
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -153,7 +153,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="2c2ee" class="javax.swing.JTextField" default-binding="true">
+      <component id="2c2ee" class="javax.swing.JTextField" binding="contactoTextField">
         <constraints>
           <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
